fix: update cli argument to prevent warning